# SentinelQ

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: baseline.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
Doc/: investment_agent_plan_v2.1.docx  investment_agent_plan_v2.2.docx  review.txt
api/: __init__.py  kis_chart.py  kis_client.py  openapi.yaml
config/: risk_limits.yaml
docs/: DOMAIN_GLOSSARY.md  g6-self-evaluation.md  phase3-graduation-review.md
docs/adr/: ADR-0001-a4-exit-ladder-mismatch.md  ADR-0002-a4-5y-walkforward-failure.md  ADR-0003-a4-a7-combined-failure.md  ADR-0004-a3-vol-compression-failure.md  ADR-0005-h1-universe-broadening-result.md  ADR-0006-a2-failure-phase0-stalled.md  ADR-0007-a-f01-book-to-market-result.md  ADR-0008-a-f03-gross-profitability-result.md  ADR-0009-a-ff01-multifactor-result.md  ADR-0010-benchmark-honesty-check.md  ADR-0011-project-termination.md  ADR-0012-direction-b-prime-no-go.md  ADR-0013-phase3-kr-investor-tools.md
docs/preregistration/: PREREG-0001-a4-multiyear-validation.md  (+13 more)
pages/: 1_양도세_계산기.py  2_포트폴리오_대시보드.py  3_리밸런싱.py  4_DART_공시.py
prompts/: README.md  analyst_v0.md  risk_reviewer_v0.md  screener_v0.md
scripts/: dart_equity_backfill.py  dart_income_assets_backfill.py  dart_smoke.py  kis_backfill_5y.py  kis_chart_smoke.py  kis_fetch_limit_probe.py  kis_inquire_price.py  kis_investor_forward_collect.py  kis_investor_smoke.py  kis_shares_snapshot.py  kis_token.py  paper_trade.py  run_dart_monitor.py  run_portfolio.py  run_rebalance.py  run_tax_report.py  verify_g2.py
sentinelq/: __init__.py
tests/: test_after_tax.py  test_capital_gains.py  test_dart_api.py  test_dart_monitor.py  test_deduction.py  test_g2_verify.py  test_hometax_guide.py  test_kis_balance.py  test_kis_history.py  test_kiwoom_csv.py  test_loss_harvesting.py  test_miraeasset_csv.py  test_nts_form.py  test_portfolio.py  test_portfolio_report.py  test_ports_smoke.py  test_rebalance.py  test_rebalance_report.py  test_risk.py  test_tax_lots.py  test_tax_report.py  test_telegram_notify.py  test_ui_helpers.py  test_walkforward.py
(+89 files in other folders)
